feat: autofill google api added

--- a/client/src/Components/CSS/MainPage.css
+++ b/client/src/Components/CSS/MainPage.css
@@ -25,3 +25,29 @@
   margin-right: "auto";
   width: "30%";
 } */
+
+
+  body {
+      margin: 0;
+  }
+  #map {
+      width: 0;
+      height: 0;
+      background-color:transparent;
+      display: none;
+  }
+  #search-box {
+      padding-left: 20px;
+      padding-top: 20px;
+      width: 800px;
+      height: 100px;
+  }
+  #result {
+      padding-left: 20px;
+      padding-top: 20px;
+      width: 800px;
+      height: 100px;
+  }
+  .leaflet-locationiq-results{
+      padding-top: 45px;
+  }
