--- a/client/src/Components/CSS/Filter.css
+++ b/client/src/Components/CSS/Filter.css
@@ -14,29 +14,54 @@
 }
 
 .pricecont {
-  background-color: rgba(255, 255, 255, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.5);
   border-radius: 25px;
+  border: 1px solid; */
+  padding: 2rem;
+  margin-bottom: 15px;
   border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
 }
 .ratingcont {
-  background-color: rgba(255, 255, 255, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.5);
   border-radius: 25px;
+  border: 1px solid; */
+  padding: 2rem;
+  margin-bottom: 15px;
   border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
 }
 .languagecont {
-  background-color: rgba(255, 255, 255, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.5);
   border-radius: 25px;
+  border: 1px solid; */
+  padding: 2rem;
+  margin-bottom: 15px;
   border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
 }
 .gendercont {
-  background-color: rgba(255, 255, 255, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.5);
   border-radius: 25px;
+  border: 1px solid; */
+  padding: 2rem;
+  margin-bottom: 15px;
   border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
 }
 .interestcont {
-  background-color: rgba(255, 255, 255, 0.5);
+  /* background-color: rgba(255, 255, 255, 0.5);
   border-radius: 25px;
+  border: 1px solid; */
+  padding: 2rem;
+  margin-bottom: 15px;
   border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
 }
 .slider {
   width: 80%;
