--- a/client/src/Components/CSS/Sidebar.css
+++ b/client/src/Components/CSS/Sidebar.css
@@ -50,3 +50,10 @@
 
     /* background: rgba(0, 0, 0, 0.3); */
 }
+
+
+@media only screen and (max-width: 700px){
+  #sidebar {
+    display: none;
+  }
+}
