--- a/client/src/Components/CSS/MainPage.css
+++ b/client/src/Components/CSS/MainPage.css
@@ -1,16 +1,20 @@
 #main{
-
-    margin: 200px auto;
-    display: "block",
+    display: "block";
+    padding: 1rem;
+    margin-top: 3rem;
 }
-#card{
+
+#crd{
   display: block;
-  padding: 3rem;
+  padding: 1rem;
+  height: 13rem;
   font-size: 1.5rem;
+  text-align: center;
   border: 1px solid;
   border-radius: 10px 10px 10px 10px;
   background: rgba(0, 0, 0, 0.2);
 }
+
 #mainText{
   display: block;
   text-align: center;
@@ -39,8 +43,8 @@
   #search-box {
       padding-left: 20px;
       padding-top: 20px;
-      width: 800px;
-      height: 100px;
+      width: 100%;
+      height: 20rem;
   }
   #result {
       padding-left: 20px;
@@ -50,4 +54,35 @@
   }
   .leaflet-locationiq-results{
       padding-top: 45px;
+  }
+
+  .input-group{
+    width: 100%;
+    text-align: center;
+  }
+
+  .input-group input{
+    display: block;
+    border-radius: 20px;
+    width: 100%;
+    /* font-size: 20px; */
+  }
+
+  .input-group a{
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+
+  .input-group a #search{
+    margin-top: 20px;
+    border-radius: 20px;
+    width: calc(100% - 10px);
+  }
+
+  #nearby{
+    border-radius: 20px;
+    margin-top: 1.3rem;
+    margin-left: 1.3rem;
+    width: calc(100% - 40px);
   }
