Create trip page was added

--- a/client/src/Components/CSS/CreateTrip.css
+++ b/client/src/Components/CSS/CreateTrip.css
@@ -1,5 +1,12 @@
 .requestcont {
-  padding: 5rem;
+  padding: 2rem;
+  margin-bottom: 15px;
+  border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
+}
+.datecont {
+  padding: 1rem;
   margin-bottom: 15px;
   border: 1px solid;
   border-radius: 10px 10px 10px 10px;
