--- a/client/src/Components/CSS/Inbox.css
+++ b/client/src/Components/CSS/Inbox.css
@@ -80,7 +80,8 @@
     .inbox {
         padding: 0.7rem;
         margin: 0.5rem;
-        height: 26rem;
+        height: calc(100% - 5rem);
+        margin-bottom: 5rem;
     }
     
     .inbox .header {
