--- a/client/src/Components/CSS/Profile.css
+++ b/client/src/Components/CSS/Profile.css
@@ -130,10 +130,11 @@
     .profile-photo {
         padding: 0.5rem;
         padding-bottom: 0;
+        height: 19rem;
     }
     
     .profile-photo img {
-        margin-left: 2rem;
+        /* margin-left: 1rem; */
         height: 9rem;
         width: 9rem;
     }
@@ -165,13 +166,18 @@
         margin-left: calc(100% - 3rem);
         bottom: 5rem
     }
-    
 
-    .btn-guide {
+    .profile-photo span a{
+        float: left;
         width: 9.5rem;
-        height: 3rem;
-    
+        height: 2rem;
     }
+
+    /* .btn-guide {
+        width: 9.5rem;
+        height: 2rem;
+    
+    } */
     
     .online {
         font-size: 0.7rem;
