--- a/client/src/Components/CSS/GuideRequest.css
+++ b/client/src/Components/CSS/GuideRequest.css
@@ -1,4 +1,4 @@
-.guideitem {
+.guidereq{
   padding: 20px;
   width: 99%;
   align-items: center;
@@ -7,23 +7,40 @@
   border: 1px solid;
   border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.5);
-  margin-bottom: 10px;
+  margin-bottom: 5rem;
   margin-top: 20px;
   cursor: pointer;
   transition: color 200ms;
 }
-.profile-photo {
-  padding: 5rem;
-  margin-bottom: 15px;
+
+.profile-photo-req {
+  padding: 1rem;
+  margin-bottom: 0.7rem;
+  margin-top: 20px;
   border: 1px solid;
   border-radius: 10px 10px 10px 10px;
-  background:rgba(252, 252, 252, 0.336)
+  background:rgba(252, 252, 252, 0.336);
+  height: calc(100% - 5rem);
 }
 
-.priceconts {
-  /* background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 25px;
-    border: 1px solid; */
+
+#prof-data label {
+  display: block;
+  font-size: 1.2rem;
+}
+
+.profile-photo-req img {
+  border: 1px solid;
+  border-radius: 50% 50% 50% 50%;
+  padding: 0.2rem;
+  height: 5rem;
+  width: 5rem;
+  margin-bottom: 10px;
+  float: left;
+  margin-right: 10px;
+}
+
+/* .priceconts {
   padding: 2rem;
   margin-bottom: 15px;
   border: 1px solid;
@@ -43,4 +60,84 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: auto;
+}
+ */
+
+
+
+
+
+
+
+
+
+
+
+
+
+.requestcontain {
+  padding: 2rem;
+  margin-bottom: 15px;
+  border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
+}
+
+.datecontain {
+  padding: 0.3rem;
+  padding-left: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 5px;
+  border: 1px solid;
+  border-radius: 10px 10px 10px 10px;
+  background: rgba(252, 252, 252, 0.336);
+}
+
+.btn-confirm {
+  width: 100%;
+}
+
+/* --------------------------------------- Mobile view ------------------------------------------------- */
+
+@media only screen and (max-width: 700px){
+  /* Mobile view horizontal*/
+
+  /* .trip{
+    margin: 0.3rem;
+    margin-top: 1rem;
+    margin-bottom: 5rem;
+  } */
+
+  /* .title{
+    margin-bottom: 1.3rem;
+  } */
+
+  .no-req{
+    display: block;
+    font-size: 1.5rem;
+    width: 100%;
+    text-align: center;
+    margin-top: 2rem;
+  }
+
+  .send-trip a{
+    width: 100%;
+  }
+
+  .btn-confirm  button{
+    width: 100%;
+  }
+
+  .guidereq .ttlr{ 
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+    margin-left: 1rem;
+  }
+
+  .btn-x{
+    position: absolute;
+    right: 0.5rem;
+    top: 1.2rem
+  }
 }
