--- a/client/src/Components/CSS/MyTrips.css
+++ b/client/src/Components/CSS/MyTrips.css
@@ -87,7 +87,7 @@
     .trips {
         padding: 0.7rem;
         margin: 0.5rem;
-        margin-bottom: 5rem;
+        padding-bottom: 5rem;
     }
 
     .trips .header {
