--- a/client/src/Components/CSS/CreateTrip.css
+++ b/client/src/Components/CSS/CreateTrip.css
@@ -55,6 +55,10 @@
     width: 100%;
   }
 
+  .requestcont{
+    padding-bottom: 5rem;
+  }
+
   .requestcont .ttl{ 
     font-size: 1.8rem;
     text-align: center;
