fix: main page fixed

--- a/client/src/Components/CSS/MainPage.css
+++ b/client/src/Components/CSS/MainPage.css
@@ -4,6 +4,12 @@
     margin-top: 3rem;
 }
 
+.profile-photoM img {
+  padding: 0.2rem;
+  height: 10rem;
+  width: 20rem;
+  margin-bottom: 5rem;
+}
 #crd{
   display: block;
   padding: 1rem;
