--- a/client/src/Components/CSS/GuideRequest.css
+++ b/client/src/Components/CSS/GuideRequest.css
@@ -8,6 +8,7 @@
   border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.5);
   margin-bottom: 5rem;
+  padding-bottom: 5rem;
   margin-top: 20px;
   cursor: pointer;
   transition: color 200ms;
