--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+@media only screen and (max-width: 700px){
+  .testMobile {
+  display: none;
+  text-align: center;
+}
+}
+
 #bottom-navbar {
   display: none;
   overflow: hidden;
