--- a/client/src/Components/CSS/MainPage.css
+++ b/client/src/Components/CSS/MainPage.css
@@ -18,13 +18,13 @@
   text-align: center;
   border: 1px solid;
   border-radius: 10px 10px 10px 10px;
-  background: rgba(0, 0, 0, 0.2);
+  background: rgba(192, 191, 191, 0.212);
 }
 
 #mainText{
   display: block;
   text-align: center;
-  color: black;
+  color: rgb(247, 199, 199);
 }
 
 
@@ -70,7 +70,7 @@
   .input-group input{
     display: block;
     border-radius: 20px;
-    width: 100%;
+    width: 120%;
     /* font-size: 20px; */
   }
 
@@ -81,6 +81,7 @@
   }
 
   .input-group a #search{
+    
     margin-top: 20px;
     border-radius: 20px;
     width: calc(100% - 10px);
